<resources>
    <string name="app_name">NasaPictureProject</string>
    <string name="Curiosity">Curiosity</string>
    <string name="Opportunity">Opportunity</string>
    <string name="Spirit">Spirit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="downloadTitle">Download Photo</string>
    <string name="wantToDownload">Do You Want To Download This Photo?</string>
    <string name="mediaDownloading">Media will be download!</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="earthDate">Earth Date: </string>
    <string name="id">ID: </string>
    <string name="roverID">Rover ID: </string>
    <string name="roverLand">Rover Landing Date: </string>
    <string name="roverLaunch">Rover Launch Date: </string>
    <string name="roverName">Rover Name: </string>
    <string name="roverStatus">Rover Status: </string>
    <string name="cameraFullName">Camera Full Name: </string>
    <string name="cameraID">Camera ID: </string>
    <string name="cameraName">Camera Name:</string>
    <string name="cameraRoverID">Camera Rover ID: </string>
    <string name="exit">Exit</string>
    <string name="openInternet">Please Open Your Internet For Continue!</string>


    <string name="downloadingImage">Image Downloading...</string>
    <string name="downloadedImage">Image Downloaded!</string>
    <string name="downloadedImageSendMail">Image Downloaded! We Are Ready To Send Mail!</string>
    <string name="downloadFail">Download has been failed, please try again</string>
    <string name="downloadPause">Paused</string>
    <string name="downloadPending">Pending</string>
    <string name="downloadRunning">Downloading...</string>
    <string name="noInternet">Please Turn On Your Internet!</string>
</resources>